recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return(0)
           ^Spiral:3: warning: enclosing method spiral has result type Unit: return value discarded
    return(0)
    ^Spiral:5: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameters angle, length, increment.
  return(spiral(steps-1),angle,length-increment,increment)
               ^Spiral:5: error: not enough arguments for method spiral: (steps: Int, angle: Int, length: Int, increment: Int)Unit.
Unspecified value parameters angle, length, increment.
  return(spiral(steps-1),angle,length-increment,increment)
               ^Spiral:5: warning: enclosing method spiral has result type Unit: return value discarded
  return(spiral(steps-1),angle,length-increment,increment)
  ^